[package]
name = "superf4-rust"
version = "0.1.0"
edition = "2018"

# I tried [dependencies] \n winapi = "0.3", found this in a random pr, it works. (https://github.com/xu-cheng/howlong/issues/3)
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "processthreadsapi",
    "tlhelp32",
    "winnt",
    "handleapi",
] }

[dependencies]
structopt = "0.3.13"
